test/corpus/flags.txt
==================
Empty Flags
==================

interface foo {
    flags permissions { }
}

---

(source_file
  (top_level_item
    (interface_item
      (id)
      (interface_body
        (interface_items
          (typedef_item
            (flags_items
              (id)
              (flags_body))))))))

==================
Flags
==================

interface foo {
    /// This is a doc-comment.
    flags permissions {
        /// Reading
        read,
        /// Writing
        write,
        /// Execute
        exec,
    }
}

---

(source_file
  (top_level_item
    (interface_item
      (id)
      (interface_body
        (interface_items
          (typedef_item
            (flags_items
              (attribute
                (doc_comment
                  (docs)))
              (id)
              (flags_body
                (flags_case
                  (attribute
                    (doc_comment
                      (docs)))
                  (id))
                (flags_case
                  (attribute
                    (doc_comment
                      (docs)))
                  (id))
                (flags_case
                  (attribute
                    (doc_comment
                      (docs)))
                  (id))))))))))
