test/corpus/interfaces.txt
==================
Interfaces
==================


interface foo {
    type alias = string;
    fn1: func(hey: u32, ho: string) -> bool;
    fn2: func() -> result<bool, u32>;
    fn3: func() -> option<bool>;

    resource res {
        constructor();
        fn1: func(p: string) -> result<u32, aaa>;
        fn2: func(%p: borrow<string>) -> result<u32, aaa>;
    }

    record rec1 {
    }

    record rec2 {
        num: u32,
    }

    flags fl {
        a,
        b,
    }

    enum en {
        a,
        b,
    }

    variant var {
        a,
        b,
    }
}

---

(source_file
  (interface_item
    name: (id)
    body: (interface_body
      interface_items: (interface_items
        typedef: (typedef_item
          (type_item
            alias: (id)
            type: (ty))))
      interface_items: (interface_items
        func: (func_item
          name: (id)
          (func_type
            param_list: (param_list
              (named_type_list
                (named_type
                  name: (id)
                  type: (ty))
                (named_type
                  name: (id)
                  type: (ty))))
            result_list: (result_list
              (ty)))))
      interface_items: (interface_items
        func: (func_item
          name: (id)
          (func_type
            param_list: (param_list)
            result_list: (result_list
              (ty
                (result
                  (ty)
                  (ty)))))))
      interface_items: (interface_items
        func: (func_item
          name: (id)
          (func_type
            param_list: (param_list)
            result_list: (result_list
              (ty
                (option
                  (ty)))))))
      interface_items: (interface_items
        typedef: (typedef_item
          (resource_item
            name: (id)
            resource_body: (resource_body
              (resource_method
                (param_list))
              (resource_method
                (func_item
                  name: (id)
                  (func_type
                    param_list: (param_list
                      (named_type_list
                        (named_type
                          name: (id)
                          type: (ty))))
                    result_list: (result_list
                      (ty
                        (result
                          (ty)
                          (ty
                            (id))))))))
              (resource_method
                (func_item
                  name: (id)
                  (func_type
                    param_list: (param_list
                      (named_type_list
                        (named_type
                          name: (id)
                          type: (ty
                            (handle
                              (id))))))
                    result_list: (result_list
                      (ty
                        (result
                          (ty)
                          (ty
                            (id))))))))))))
      interface_items: (interface_items
        typedef: (typedef_item
          (record_item
            name: (id)
            body: (record_body))))
      interface_items: (interface_items
        typedef: (typedef_item
          (record_item
            name: (id)
            body: (record_body
              record_fields: (record_field
                name: (id)
                type: (ty))))))
      interface_items: (interface_items
        typedef: (typedef_item
          (flags_items
            name: (id)
            body: (flags_body
              flags_fields: (id)
              flags_fields: (id)))))
      interface_items: (interface_items
        typedef: (typedef_item
          (enum_items
            name: (id)
            (enum_body
              (enum_cases
                (enum_case
                  name: (id))
                (enum_case
                  name: (id)))))))
      interface_items: (interface_items
        typedef: (typedef_item
          (variant_items
            name: (id)
            body: (variant_body
              (variant_cases
                (variant_case
                  name: (id))
                (variant_case
                  name: (id))))))))))

==================
Use Items
==================
interface my-interface {
    use an-interface.{a, list, of, names}
    use my:dependency/the-interface.{more, names as foo}
    use wasi:http/types@1.0.0.{request, response};
    use types.{errno as my-errno};
}

---
