test/corpus/packages.txt
==================
Packages 1
==================

package wasi:io;

---

(source_file
 (package_decl
  (id)
  (id)))

==================
Packages 2
==================

package wasmi:io:hello;

---

(source_file
 (package_decl
  (id)
  (id)
  (id)))

==================
Packages 3
==================

package wasmi:io:hello/epic@1.0.0;

---

(source_file
 (package_decl
  (id)
  (id)
  (id)
  (id)
  (valid_semver)))

=======================================
Packages 4
=======================================

package wasi:io:some/nested/package;

---

(source_file
  (package_decl
    (id)
    (id)
    (id)
    (id)
    (id)))
